# pyo3-example

./: .gitignore  Cargo.toml  README.md  build.py  debug.py  pyproject.toml
example/: __init__.py
src/: lib.rs
