[tool.poetry]
name = "pyo3-example"
version = "0.1.0"
description = ""
authors = ["Jakob Jul Elben <jelben@deloitte.dk>"]
build = "build.py"
packages = [{ include = "example" }]

[tool.poetry.dependencies]
python = "^3.10"
setuptools-rust = "^1.4.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools-rust"]
build-backend = "poetry.core.masonry.api"
